Input manager + singleton

--- a/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj.filters
+++ b/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="..\..\common\MyMessageSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\common\InputManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\core.h">
@@ -96,6 +99,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\MyMessageSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\common\ISingleton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\common\InputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
