--- a/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj
+++ b/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="..\..\common\EntityAndComponent.cpp" />
     <ClCompile Include="..\..\common\example.cpp" />
     <ClCompile Include="..\..\common\font.cpp" />
+    <ClCompile Include="..\..\common\InputManager.cpp" />
     <ClCompile Include="..\..\common\lodepng.cpp" />
     <ClCompile Include="..\..\common\LogicManager.cpp" />
     <ClCompile Include="..\..\common\MyMessageSystem.cpp" />
@@ -141,6 +142,8 @@
     <ClInclude Include="..\..\common\EntityAndComponent.h" />
     <ClInclude Include="..\..\common\example.h" />
     <ClInclude Include="..\..\common\font.h" />
+    <ClInclude Include="..\..\common\InputManager.h" />
+    <ClInclude Include="..\..\common\ISingleton.h" />
     <ClInclude Include="..\..\common\lodepng.h" />
     <ClInclude Include="..\..\common\LogicManager.h" />
     <ClInclude Include="..\..\common\MyMessageSystem.h" />
