--- a/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj
+++ b/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj
@@ -126,11 +126,13 @@
     <ClCompile Include="..\..\common\EntityAndComponent.cpp" />
     <ClCompile Include="..\..\common\example.cpp" />
     <ClCompile Include="..\..\common\font.cpp" />
+    <ClCompile Include="..\..\common\GameObject.cpp" />
     <ClCompile Include="..\..\common\InputManager.cpp" />
     <ClCompile Include="..\..\common\lodepng.cpp" />
     <ClCompile Include="..\..\common\LogicManager.cpp" />
     <ClCompile Include="..\..\common\MyMessageSystem.cpp" />
     <ClCompile Include="..\..\common\MyTimer.cpp" />
+    <ClCompile Include="..\..\common\Player.cpp" />
     <ClCompile Include="..\..\common\Render.cpp" />
     <ClCompile Include="..\..\common\stdafx.cpp" />
     <ClCompile Include="..\..\common\sys_win.cpp" />
@@ -142,12 +144,14 @@
     <ClInclude Include="..\..\common\EntityAndComponent.h" />
     <ClInclude Include="..\..\common\example.h" />
     <ClInclude Include="..\..\common\font.h" />
+    <ClInclude Include="..\..\common\GameObject.h" />
     <ClInclude Include="..\..\common\InputManager.h" />
     <ClInclude Include="..\..\common\ISingleton.h" />
     <ClInclude Include="..\..\common\lodepng.h" />
     <ClInclude Include="..\..\common\LogicManager.h" />
     <ClInclude Include="..\..\common\MyMessageSystem.h" />
     <ClInclude Include="..\..\common\MyTimer.h" />
+    <ClInclude Include="..\..\common\Player.h" />
     <ClInclude Include="..\..\common\render.h" />
     <ClInclude Include="..\..\common\stdafx.h" />
     <ClInclude Include="..\..\common\sys.h" />
