--- a/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj.filters
+++ b/FerCalderon_PracticaPang_Arquitectura/PracticaPang_Skeleton/PracticaPang_Skeleton/swalib-master/swalib_example/swalib_example/swalib_example.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="..\..\common\InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\common\GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\common\Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\core.h">
@@ -105,6 +111,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\InputManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\common\GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\common\Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
